fix(ai-table): use existing styles for alignment

--- a/packages/styles/src/components/DataTable/_data-table.scss
+++ b/packages/styles/src/components/DataTable/_data-table.scss
@@ -11,17 +11,11 @@
     .#{$prefix}--table-header-label {
       text-align: center;
     }
-    .#{$prefix}--table-sort {
-      justify-content: center;
-    }
   }
 
   &-end {
     .#{$prefix}--table-header-label {
       text-align: end;
-    }
-    .#{$prefix}--table-sort {
-      justify-content: flex-end;
     }
   }
 }
